# vision-MLops

./: .gitignore  CLAUDE.md  LICENSES.md  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: camera_groups.yaml  promotion.yaml  split.yaml  splits.yaml  taxonomy.yaml  tuning.yaml
configs/datasets/: aau-rainsnow.yaml  checksums.lock.yaml  mio-tcd.yaml  ua-detrac.yaml  visdrone.yaml
configs/training/: base.yaml  tuned-v1-candidate.yaml  tuned-v1.yaml
data/processed/: .gitignore  eval-frozen-v1.dvc  mio-tcd-eval-v1.dvc  prod-holdout-v1.dvc  rainsnow-eval-v1.dvc  train-v1.dvc
data/raw/: .gitignore  aau-rainsnow.dvc  mio-tcd.dvc  ua-detrac.dvc
docs/: vision-mlops-platform-project-guide.md
docs/audits/: annotation-audit.json  annotation-audit.md
docs/decisions/: 0001-dataset-selection-and-mirrors.md  0002-taxonomy-mapping.md  0003-ignore-region-handling.md  0004-frame-sampling-rate.md  0005-camera-groups.md  0006-split-design.md  0007-eval-harness-design.md  0008-corruption-calibration-and-harness-freeze.md  0009-colab-training-and-dagshub-hosting.md  0010-promotion-contract.md
docs/experiments/: learning-curve.md  tuning.md
reports/champion-v1/: report.json  report.md
reports/promotion/: decision.json  decision.md
reports/tuned-v1/: report.json  report.md
reports/zero-shot-floor/: report.json  report.md  v1.1-equivalence.txt
scripts/: colab_train.py  derive_camera_groups.py  edge_match.py  register_champion.py
src/data/: convert.py  datasets.py  download.py  eval_sets.py  hygiene.py  sample.py  split.py  taxonomy.py
src/eval/: adapter.py  bootstrap.py  corruption.py  harness.py  report.py
src/registry/: __init__.py  promote.py
src/train/: __init__.py  diagnose.py  run.py  tune.py
tests/: test_adapter.py  test_bootstrap.py  test_broken_runs.py  test_camera_groups.py  test_convert.py  test_corruption.py  test_datasets.py  test_diagnose.py  test_download.py  test_eval_sets.py  test_harness.py  test_hygiene.py  test_placeholder.py  test_promote.py  test_report.py  test_run.py  test_sample.py  test_slices.py  test_split.py  test_taxonomy.py  test_tune.py
