[project]
name = "traffic-vision-platform"
version = "0.0.0"
description = "Production-grade vision MLOps platform for vehicle detection (UA-DETRAC + cross-dataset eval)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
]

# uv manages the environment; this project is an application, not an installable library.
[tool.uv]
package = false

# Dev tooling (installed by default). `data` is opt-in (heavy: dvc) — CI does not need it.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "types-PyYAML>=6.0",
]
data = [
    "dvc>=3.55",
    "kaggle>=1.6",
    "gdown>=5.2",
    "opencv-python-headless>=4.9",
]
eval = [
    "ultralytics>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# cv2 (opencv) and ultralytics ship no/partial type stubs and are not installed in CI; both are
# lazy-imported behind the `data`/`eval` groups, so treat them as Any rather than force torch
# into every lint job.
[[tool.mypy.overrides]]
module = ["cv2", "ultralytics"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
