[project]
name = "traffic-vision-platform"
version = "0.0.0"
description = "Production-grade vision MLOps platform for vehicle detection (UA-DETRAC + cross-dataset eval)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
]

# uv manages the environment; this project is an application, not an installable library.
[tool.uv]
package = false

# Dev tooling (installed by default). `data` is opt-in (heavy: dvc) — CI does not need it.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "types-PyYAML>=6.0",
]
data = [
    "dvc>=3.55",
    "kaggle>=1.6",
    "gdown>=5.2",
    "opencv-python-headless>=4.9",
]
eval = [
    "ultralytics>=8.3",
]
train = [
    "mlflow>=2.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# Heavy lazy deps (cv2/ultralytics/mlflow/ray) live behind opt-in groups and are absent in CI.
# follow_imports=skip treats them as Any EVEN WHEN INSTALLED, so mypy sees the identical world
# locally (packages present) and in CI (absent) — otherwise strict's warn_unused_ignores flags
# ignore-comments as unused in whichever env the package is missing from.
[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "ultralytics", "ultralytics.*", "mlflow", "mlflow.*", "ray", "ray.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
